# librealsense

examples/multicam/: CMakeLists.txt  rs-multicam-pose.cpp
